developer/17.0/reference/api/kmc-model-info.modelinfocompiler.md
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](./index.md) &gt; [@keymanapp/kmc-model-info](./kmc-model-info.md) &gt; [ModelInfoCompiler](./kmc-model-info.modelinfocompiler.md)

## ModelInfoCompiler class

**Signature:**

```typescript
export declare class ModelInfoCompiler implements KeymanCompiler 
```
**Implements:** KeymanCompiler

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)()](./kmc-model-info.modelinfocompiler._constructor_.md) |  | Constructs a new instance of the <code>ModelInfoCompiler</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [init(callbacks, options)](./kmc-model-info.modelinfocompiler.init.md) |  |  |
|  [run(inputFilename, outputFilename)](./kmc-model-info.modelinfocompiler.run.md) |  | Builds .model\_info file with metadata from the model and package source file. This function is intended for use within the lexical-models repository. While many of the parameters could be deduced from each other, they are specified here to reduce the number of places the filenames are constructed. |
|  [write(artifacts)](./kmc-model-info.modelinfocompiler.write.md) |  |  |

